Reduce number of packets being sent, adjust logic